# Codsworth

./: .gitignore
backend/: alembic.ini  app.py  config.py  consts.py  database.py  db_utils.py  errors.py  exceptions_handlers.py  openapi_schema.py  pyproject.toml  requirements.txt  routes.py  shared_schemas.py
backend/alembic/: env.py
backend/alembic/versions/: 061826754c60_add_state_date_to_notes.py  9006ee86d4fe_add_notes_and_statuses.py  cb3782557c1e_unique_user_email_constraint.py  e4b7fc94d40b_create_user_table.py
backend/events/: controllers.py  instances.py  router.py  routers.py  routes.py  views.py
backend/notes/: controllers.py  crud.py  instances.py  models.py  router.py  routers.py  routes.py  schemas.py  views.py
backend/security/: authentication_middleware.py  jwt.py
backend/users/: controllers.py  crud.py  instances.py  models.py  routers.py  schemas.py
backend/vault/: router.py  routes.py  views.py
backend/vaults/: controllers.py  instances.py  routers.py
backend/workers/: cleaner.py
