[tool.poetry]
name = "codsworth"
version = "0.1.0"
description = "Helpfull robot-butler"
authors = ["Filipp Bushmanov <herooftheday82@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
starlette = "0.41.3"
uvicorn = "0.32.1"
anyio = "4.6.2.post1"
click = "8.1.7"
h11 = "0.14.0"
idna = "3.10"
sniffio = "0.41.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
