[tool.poetry]
name = "codsworth"
version = "0.1.0"
description = "Helpfull robot-butler"
authors = ["Filipp Bushmanov <herooftheday82@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
uvicorn = "0.32.1"
anyio = "4.6.2.post1"
click = "8.1.7"
h11 = "0.14.0"
idna = "3.10"
sniffio = "1.1"
sqlalchemy = "^2.0.36"
databases = "^0.9.0"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
litestar = {extras = ["jwt"], version = "^2.14.0"}
pydantic = "^2.10.4"
advanced-alchemy = "^0.28.0"
ruff = "^0.9.2"
python-jose = "^3.3.0"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
